--- a/package.json
+++ b/package.json
@@ -21,14 +21,22 @@
     "prepare": "husky install",
     "seed": "cd server && npm run seed"
   },
-  "keywords": ["freelancing", "platform", "mern", "typescript", "react", "nodejs"],
+  "keywords": [
+    "freelancing",
+    "platform",
+    "mern",
+    "typescript",
+    "react",
+    "nodejs"
+  ],
   "author": "TalentHive Team",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,json,md}": [
