--- a/server/package.json
+++ b/server/package.json
@@ -56,6 +56,7 @@
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.3",
     "nodemon": "^3.0.2",
+    "strip-ansi-cli": "^4.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
