--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "@types/streamifier": "^0.1.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
@@ -33,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.11",
     "socket.io": "^4.7.4",
+    "streamifier": "^0.1.1",
     "stripe": "^14.9.0",
     "winston": "^3.11.0"
   },
