--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/lab": "6.0.0-beta.26",
-    "@mui/material": "^7.3.5",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/lab": "^6.0.0-beta.26",
+    "@mui/material": "^6.4.3",
     "@reduxjs/toolkit": "^2.10.1",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.2.0",
