--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.11",
+    "resend": "^6.5.2",
     "socket.io": "^4.7.4",
     "streamifier": "^0.1.1",
     "stripe": "^14.9.0",
