--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "seed": "ts-node -r tsconfig-paths/register src/scripts/seed.ts"
+    "seed": "ts-node -r tsconfig-paths/register src/scripts/seed.ts",
+    "seed:complete-profiles": "ts-node -r tsconfig-paths/register src/scripts/seedWithCompleteProfiles.ts"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
