--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -133,121 +133,134 @@ jobs:
         npm audit --audit-level moderate
       continue-on-error: true
 
-  # Build and Push Docker Images
-  build-and-push:
-    runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test, security-audit]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
-    permissions:
-      contents: read
-      packages: write
+  # =============================================================================
+  # PRODUCTION DEPLOYMENT (COMMENTED OUT)
+  # =============================================================================
+  # Uncomment the sections below when ready for production deployment.
+  # 
+  # Required GitHub Secrets for production:
+  # - VITE_API_URL: Production API URL (e.g., https://api.talenthive.com)
+  # - VITE_STRIPE_PUBLISHABLE_KEY: Stripe publishable key for production
+  # - PRODUCTION_HOST: Production server hostname/IP
+  # - PRODUCTION_USER: SSH username for production server
+  # - PRODUCTION_SSH_KEY: SSH private key for production server
+  # =============================================================================
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+  # # Build and Push Docker Images
+  # build-and-push:
+  #   runs-on: ubuntu-latest
+  #   needs: [backend-test, frontend-test, security-audit]
+  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #   
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v4
+  #
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v3
+  #
+  #   - name: Log in to GitHub Container Registry
+  #     uses: docker/login-action@v3
+  #     with:
+  #       registry: ghcr.io
+  #       username: ${{ github.actor }}
+  #       password: ${{ secrets.GITHUB_TOKEN }}
+  #
+  #   - name: Extract metadata for backend
+  #     id: meta-backend
+  #     uses: docker/metadata-action@v5
+  #     with:
+  #       images: ghcr.io/${{ github.repository }}/backend
+  #       tags: |
+  #         type=ref,event=branch
+  #         type=sha,prefix={{branch}}-
+  #         type=raw,value=latest,enable={{is_default_branch}}
+  #
+  #   - name: Build and push backend image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: ./server
+  #       file: ./server/Dockerfile
+  #       push: true
+  #       tags: ${{ steps.meta-backend.outputs.tags }}
+  #       labels: ${{ steps.meta-backend.outputs.labels }}
+  #       cache-from: type=gha
+  #       cache-to: type=gha,mode=max
+  #
+  #   - name: Extract metadata for frontend
+  #     id: meta-frontend
+  #     uses: docker/metadata-action@v5
+  #     with:
+  #       images: ghcr.io/${{ github.repository }}/frontend
+  #       tags: |
+  #         type=ref,event=branch
+  #         type=sha,prefix={{branch}}-
+  #         type=raw,value=latest,enable={{is_default_branch}}
+  #
+  #   - name: Build and push frontend image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: ./client
+  #       file: ./client/Dockerfile.prod
+  #       push: true
+  #       tags: ${{ steps.meta-frontend.outputs.tags }}
+  #       labels: ${{ steps.meta-frontend.outputs.labels }}
+  #       build-args: |
+  #         VITE_API_URL=${{ secrets.VITE_API_URL }}
+  #         VITE_STRIPE_PUBLISHABLE_KEY=${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}
+  #       cache-from: type=gha
+  #       cache-to: type=gha,mode=max
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata for backend
-      id: meta-backend
-      uses: docker/metadata-action@v5
-      with:
-        images: ghcr.io/${{ github.repository }}/backend
-        tags: |
-          type=ref,event=branch
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-
-    - name: Build and push backend image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./server
-        file: ./server/Dockerfile
-        push: true
-        tags: ${{ steps.meta-backend.outputs.tags }}
-        labels: ${{ steps.meta-backend.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-    - name: Extract metadata for frontend
-      id: meta-frontend
-      uses: docker/metadata-action@v5
-      with:
-        images: ghcr.io/${{ github.repository }}/frontend
-        tags: |
-          type=ref,event=branch
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-
-    - name: Build and push frontend image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./client
-        file: ./client/Dockerfile.prod
-        push: true
-        tags: ${{ steps.meta-frontend.outputs.tags }}
-        labels: ${{ steps.meta-frontend.outputs.labels }}
-        build-args: |
-          VITE_API_URL=${{ secrets.VITE_API_URL }}
-          VITE_STRIPE_PUBLISHABLE_KEY=${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-  # Deploy to Production
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build-and-push]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
-    environment:
-      name: production
-      url: https://talenthive.com
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Deploy to production server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.PRODUCTION_HOST }}
-        username: ${{ secrets.PRODUCTION_USER }}
-        key: ${{ secrets.PRODUCTION_SSH_KEY }}
-        script: |
-          cd /opt/talenthive
-          
-          # Pull latest code
-          git pull origin main
-          
-          # Pull latest Docker images
-          docker-compose -f docker-compose.prod.yml pull
-          
-          # Deploy with zero downtime
-          docker-compose -f docker-compose.prod.yml up -d --remove-orphans
-          
-          # Clean up old images
-          docker image prune -f
-          
-          # Wait for services to be healthy
-          sleep 30
-          
-          # Health check
-          curl -f http://localhost:5000/api/health || exit 1
-          curl -f http://localhost/health || exit 1
-
-    - name: Notify deployment success
-      if: success()
-      run: echo "Deployment successful!"
-
-    - name: Notify deployment failure
-      if: failure()
-      run: echo "Deployment failed!"
+  # # Deploy to Production
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [build-and-push]
+  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #   
+  #   environment:
+  #     name: production
+  #     url: https://talenthive.com
+  #
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v4
+  #
+  #   - name: Deploy to production server
+  #     uses: appleboy/ssh-action@v1.0.0
+  #     with:
+  #       host: ${{ secrets.PRODUCTION_HOST }}
+  #       username: ${{ secrets.PRODUCTION_USER }}
+  #       key: ${{ secrets.PRODUCTION_SSH_KEY }}
+  #       script: |
+  #         cd /opt/talenthive
+  #         
+  #         # Pull latest code
+  #         git pull origin main
+  #         
+  #         # Pull latest Docker images
+  #         docker-compose -f docker-compose.prod.yml pull
+  #         
+  #         # Deploy with zero downtime
+  #         docker-compose -f docker-compose.prod.yml up -d --remove-orphans
+  #         
+  #         # Clean up old images
+  #         docker image prune -f
+  #         
+  #         # Wait for services to be healthy
+  #         sleep 30
+  #         
+  #         # Health check
+  #         curl -f http://localhost:5000/api/health || exit 1
+  #         curl -f http://localhost/health || exit 1
+  #
+  #   - name: Notify deployment success
+  #     if: success()
+  #     run: echo "Deployment successful!"
+  #
+  #   - name: Notify deployment failure
+  #     if: failure()
+  #     run: echo "Deployment failed!"
