--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "TalentHive Team",
   "license": "MIT",
   "devDependencies": {
+    "axios": "^1.13.2",
     "concurrently": "^8.2.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
