--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "seed": "ts-node -r tsconfig-paths/register src/scripts/seed.ts",
     "seed:complete-profiles": "ts-node -r tsconfig-paths/register src/scripts/seedWithCompleteProfiles.ts",
-    "seed:work-logs": "ts-node -r tsconfig-paths/register src/scripts/seedWorkLogs.ts"
+    "seed:work-logs": "ts-node -r tsconfig-paths/register src/scripts/seedWorkLogs.ts",
+    "validate-data": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
