--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "seed": "ts-node -r tsconfig-paths/register src/scripts/seed.ts",
     "validate-data": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts"
   },
@@ -56,7 +56,7 @@
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.3",
     "nodemon": "^3.0.2",
