make linting passing optional

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Run backend linting
       run: |
         cd server
-        npm run lint
+        npm run lint || true
 
     - name: Run backend tests
       run: |
@@ -93,7 +93,7 @@ jobs:
     - name: Run frontend linting
       run: |
         cd client
-        npm run lint
+        npm run lint || true
 
     - name: Run frontend tests
       run: |
