--- a/.env.production.example
+++ b/.env.production.example
@@ -47,7 +47,9 @@ DEFAULT_CURRENCY=USD
 BCRYPT_ROUNDS=12
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_SKIP_SUCCESSFUL_REQUESTS=false
 AUTH_RATE_LIMIT_MAX=5
+CORS_ORIGIN=https://talenthive.com
 
 # Monitoring and Logging
 LOG_LEVEL=info
