feat(client): Initialize client application with build configuration
- Add environment configuration templates for development and production
- Add package.json with project metadata and dependencies
- Add TypeScript configuration for type checking and compilation
- Add Vite configuration for fast development server and optimized builds
- Add README documentation for client setup and usage
- Establish foundation for React/TypeScript client application

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,19 +11,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "strictFunctionTypes": false,
-    "strictBindCallApply": false,
-    "strictPropertyInitialization": false,
-    "noImplicitThis": false,
-    "alwaysStrict": false,
-    "noImplicitReturns": false,
-    "noUncheckedIndexedAccess": false,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
