--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5000/api/v1
+VITE_API_BASE_URL=http://localhost:5000/api
 VITE_SOCKET_URL=http://localhost:5000
 
 # App Configuration
@@ -17,4 +17,28 @@ VITE_ENABLE_SENTRY=false
 VITE_ENABLE_DEVTOOLS=true
 
 # Environment
+# API Configuration
+VITE_API_BASE_URL=http://localhost:5000/api
+VITE_SOCKET_URL=http://localhost:5000
+
+# App Configuration
+VITE_APP_NAME=TalentHive
+VITE_APP_VERSION=1.0.0
+
+# External Services (Replace with your actual values)
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+VITE_CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+VITE_CLOUDINARY_UPLOAD_PRESET=your_upload_preset
+
+# Feature Flags
+VITE_ENABLE_ANALYTICS=false
+VITE_ENABLE_SENTRY=false
+VITE_ENABLE_DEVTOOLS=true
+
+# Environment
 VITE_NODE_ENV=development
+
+# Build Configuration (Production)
+# GENERATE_SOURCEMAP=false
+# USE_CDN=false
+# ANALYZE=false
