--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:check": "tsc && vite build",
+    "build:analyze": "ANALYZE=true vite build",
     "preview": "vite preview",
     "test": "vitest run --reporter dot --reporter verbose --no-color",
     "test:ui": "vitest --ui",
@@ -58,6 +59,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^25.0.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "strip-ansi-cli": "^4.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
