chore(scripts): Add seed and validation scripts with CLI tooling
- Add multiple seed script variants (dev, demo, testing, status, clean, quality)
- Add validation data scripts (check, fix, stats) to root package.json
- Install @faker-js/faker for data generation in seed scripts
- Install chalk for colored CLI output
- Install commander for CLI argument parsing
- Install inquirer for interactive CLI prompts
- Add @types/inquirer for TypeScript support
- Create server/src/scripts/README.md documentation
- Create server/src/scripts/obsolete-backup/README.md for legacy scripts
- Update server package-lock.json with new dependencies
- Improve developer experience with interactive data management tools

--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "prepare": "husky install",
     "seed": "cd server && npm run seed",
-    "validate-data": "cd server && npm run validate-data"
+    "seed:dev": "cd server && npm run seed:dev",
+    "seed:demo": "cd server && npm run seed:demo",
+    "seed:testing": "cd server && npm run seed:testing",
+    "seed:status": "cd server && npm run seed:status",
+    "seed:clean": "cd server && npm run seed:clean",
+    "seed:quality": "cd server && npm run seed:quality",
+    "validate-data": "cd server && npm run validate-data",
+    "validate-data:check": "cd server && npm run validate-data:check",
+    "validate-data:fix": "cd server && npm run validate-data:fix",
+    "validate-data:stats": "cd server && npm run validate-data:stats"
   },
   "keywords": [
     "freelancing",
