--- a/server/package.json
+++ b/server/package.json
@@ -10,15 +10,34 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:performance": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/mockPerformanceTest.ts",
+    "test:integration": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/IntegrationTestSuite.ts",
+    "test:final-checkpoint": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/simpleFinalCheckpoint.ts",
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
-    "seed": "ts-node -r tsconfig-paths/register src/scripts/seed.ts",
-    "validate-data": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts"
+    "seed": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts seed",
+    "seed:dev": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts seed --environment development",
+    "seed:demo": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts seed --environment demo",
+    "seed:testing": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts seed --environment testing",
+    "seed:status": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts status",
+    "seed:clean": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts clean",
+    "seed:quality": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts quality check",
+    "seed:config": "ts-node -r tsconfig-paths/register src/scripts/consolidated-seed/cli.ts config show",
+    "seed:permissions": "ts-node -r tsconfig-paths/register src/scripts/seedPermissions.ts",
+    "seed:roles": "ts-node -r tsconfig-paths/register src/scripts/seedRoles.ts",
+    "seed:worklogs": "ts-node -r tsconfig-paths/register src/scripts/seedWorkLogs.ts",
+    "validate-data": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts",
+    "validate-data:check": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts check",
+    "validate-data:fix": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts fix",
+    "validate-data:stats": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts stats"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@sendgrid/mail": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.6.2",
     "cloudinary": "^1.41.0",
+    "commander": "^14.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -27,6 +46,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "inquirer": "^13.1.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.0.3",
@@ -47,6 +67,7 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/inquirer": "^9.0.9",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
