--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -39,5 +39,8 @@
     "types": ["jest", "node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
