--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,150 @@ on:
 env:
   NODE_VERSION: '20'
 
+# =============================================================================
+# CONSOLIDATED SEED SYSTEM INTEGRATION
+# =============================================================================
+# This pipeline now includes comprehensive testing of the new consolidated 
+# seed system which provides:
+# - Unified CLI interface for database seeding
+# - Multi-environment support (development, testing, demo)
+# - Performance validation (2-minute requirement compliance)
+# - Data quality validation and reporting
+# - Incremental seeding capabilities
+# - Configuration management and validation
+# =============================================================================
+
 jobs:
+  # Consolidated Seed System Tests
+  seed-system-test:
+    runs-on: ubuntu-latest
+    
+    services:
+      mongodb:
+        image: mongo:7.0
+        env:
+          MONGO_INITDB_ROOT_USERNAME: admin
+          MONGO_INITDB_ROOT_PASSWORD: password
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: 'npm'
+        cache-dependency-path: server/package-lock.json
+
+    - name: Install backend dependencies
+      run: |
+        cd server
+        npm ci
+
+    - name: Install MongoDB Shell (mongosh)
+      run: |
+        wget https://downloads.mongodb.com/compass/mongosh-2.1.1-linux-x64.tgz
+        tar -xzf mongosh-2.1.1-linux-x64.tgz
+        sudo mv mongosh-2.1.1-linux-x64/bin/* /usr/local/bin/
+        sudo chmod +x /usr/local/bin/mongosh
+        mongosh --version
+
+    - name: Setup MongoDB test database
+      run: |
+        sleep 15
+        mongosh "mongodb://admin:password@localhost:27017/admin" --eval "db.adminCommand('ping')"
+        mongosh "mongodb://admin:password@localhost:27017/admin" --eval "
+          db.createUser({
+            user: 'testuser',
+            pwd: 'testpass',
+            roles: [
+              { role: 'readWrite', db: 'talenthive_seed_test' },
+              { role: 'dbAdmin', db: 'talenthive_seed_test' }
+            ]
+          });
+        "
+
+    - name: Test consolidated seed system configuration
+      run: |
+        cd server
+        npm run seed:config:validate -- --environment testing
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_seed_test?authSource=admin
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+
+    - name: Run integration tests for seed system
+      run: |
+        cd server
+        npm run seed:test:integration
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_seed_test?authSource=admin
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+        SEED_ENVIRONMENT: testing
+        SEED_BATCH_SIZE: 25
+
+    - name: Test performance requirements (2-minute limit)
+      run: |
+        cd server
+        timeout 150s npm run seed:performance:validate || exit 1
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_seed_test?authSource=admin
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+
+    - name: Test multi-environment compatibility
+      run: |
+        cd server
+        # Test development environment config
+        npm run seed:config:show -- --environment development
+        # Test demo environment config  
+        npm run seed:config:show -- --environment demo
+        # Test testing environment config
+        npm run seed:config:show -- --environment testing
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_seed_test?authSource=admin
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+
+    - name: Generate seed system reports
+      run: |
+        cd server
+        mkdir -p reports
+        # Generate performance report
+        npm run seed:performance:validate -- --export reports/performance-report.json || true
+        # Generate quality report  
+        npm run seed:quality -- --export reports/quality-report.json || true
+        # Generate configuration documentation
+        npm run seed:config:show -- --environment development > reports/config-development.txt
+        npm run seed:config:show -- --environment testing > reports/config-testing.txt
+        npm run seed:config:show -- --environment demo > reports/config-demo.txt
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_seed_test?authSource=admin
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+
+    - name: Upload seed system reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: seed-system-reports
+        path: server/reports/
+        retention-days: 30
+
   # Backend Tests
   backend-test:
     runs-on: ubuntu-latest
@@ -96,7 +239,55 @@ jobs:
     - name: Seed test database
       run: |
         cd server
-        npm run seed
+        npm run seed:testing
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_test?authSource=admin
+        REDIS_URL: redis://localhost:6379
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+        JWT_EXPIRES_IN: 24h
+        JWT_REFRESH_EXPIRES_IN: 7d
+        SENDGRID_API_KEY: SG.test-api-key-for-testing
+        FROM_EMAIL: test@talenthive.com
+        FROM_NAME: TalentHive Test
+        STRIPE_SECRET_KEY: sk_test_mock_key
+        STRIPE_PUBLISHABLE_KEY: pk_test_mock_key
+        STRIPE_WEBHOOK_SECRET: whsec_test_mock_secret
+        CLOUDINARY_CLOUD_NAME: test-cloud
+        CLOUDINARY_API_KEY: test-api-key
+        CLOUDINARY_API_SECRET: test-api-secret
+        # Consolidated seed system configuration
+        SEED_ENVIRONMENT: testing
+        SEED_SKIP_EXISTING: true
+        SEED_BATCH_SIZE: 50
+
+    - name: Validate seed data quality
+      run: |
+        cd server
+        npm run seed:quality
+      env:
+        NODE_ENV: test
+        MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_test?authSource=admin
+        REDIS_URL: redis://localhost:6379
+        JWT_SECRET: test_jwt_secret_very_long_for_security_purposes
+        JWT_REFRESH_SECRET: test_refresh_secret_very_long_for_security_purposes
+        JWT_EXPIRES_IN: 24h
+        JWT_REFRESH_EXPIRES_IN: 7d
+        SENDGRID_API_KEY: SG.test-api-key-for-testing
+        FROM_EMAIL: test@talenthive.com
+        FROM_NAME: TalentHive Test
+        STRIPE_SECRET_KEY: sk_test_mock_key
+        STRIPE_PUBLISHABLE_KEY: pk_test_mock_key
+        STRIPE_WEBHOOK_SECRET: whsec_test_mock_secret
+        CLOUDINARY_CLOUD_NAME: test-cloud
+        CLOUDINARY_API_KEY: test-api-key
+        CLOUDINARY_API_SECRET: test-api-secret
+
+    - name: Run performance validation
+      run: |
+        cd server
+        npm run seed:performance
       env:
         NODE_ENV: test
         MONGODB_URI: mongodb://admin:password@localhost:27017/talenthive_test?authSource=admin
@@ -183,7 +374,7 @@ jobs:
   # Security Audit
   security-audit:
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    needs: [seed-system-test, backend-test, frontend-test]
 
     steps:
     - name: Checkout code
@@ -217,6 +408,12 @@ jobs:
   # - PRODUCTION_HOST: Production server hostname/IP
   # - PRODUCTION_USER: SSH username for production server
   # - PRODUCTION_SSH_KEY: SSH private key for production server
+  # 
+  # CONSOLIDATED SEED SYSTEM DEPLOYMENT NOTES:
+  # - Use 'npm run seed:demo' for demo environment seeding
+  # - Use 'npm run seed:performance:validate' to ensure 2-minute requirement
+  # - Use 'npm run seed:quality' to validate data quality before going live
+  # - Use 'npm run seed:status' to check database state
   # =============================================================================
 
   # # Build and Push Docker Images
