--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,16 @@
     "seed:worklogs": "ts-node -r tsconfig-paths/register src/scripts/seedAll.ts worklogs",
     "seed:roles": "ts-node -r tsconfig-paths/register src/scripts/seedAll.ts roles",
     "seed:profiles": "ts-node -r tsconfig-paths/register src/scripts/seedAll.ts profiles",
+    "assign-contracts": "ts-node -r tsconfig-paths/register src/scripts/assignContractsToUser.ts",
     "validate-data": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "@types/inquirer": "^9.0.9",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.6.2",
     "cloudinary": "^1.41.0",
+    "commander": "^14.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -32,6 +36,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "inquirer": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.0.3",
