feat(contracts): enhance debugging and data extraction for contract retrieval
- Add robust data extraction with multiple fallback paths in contracts service
- Implement comprehensive logging in getMyContracts controller to track user ID resolution and query execution
- Add staleTime and gcTime configuration to contracts query for always-fresh data
- Enhance ContractsPage UI with user info display and manual refresh button
- Create assignContractsToUser script for bulk contract assignment to users
- Create debugUserContracts script for troubleshooting user contract visibility issues
- Add debug-user npm script to package.json for running diagnostic queries
- Improve ObjectId type handling in contract queries to ensure proper MongoDB matching
- Add sample contract inspection and direct query testing in controller for data validation

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "seed:roles": "ts-node -r tsconfig-paths/register src/scripts/seedAll.ts roles",
     "seed:profiles": "ts-node -r tsconfig-paths/register src/scripts/seedAll.ts profiles",
     "assign-contracts": "ts-node -r tsconfig-paths/register src/scripts/assignContractsToUser.ts",
+    "debug-user": "ts-node -r tsconfig-paths/register src/scripts/debugUserContracts.ts",
     "validate-data": "ts-node -r tsconfig-paths/register src/scripts/validateData.ts"
   },
   "dependencies": {
