docs(stripe): add development mode documentation and test utilities

--- a/server/.env.development
+++ b/server/.env.development
@@ -10,3 +10,6 @@ RATE_LIMIT_MAX_REQUESTS=10000
 
 # Development-friendly settings
 LOG_LEVEL=debug
+
+# Skip Stripe verification in development
+MOCK_STRIPE_CONNECT=true
