docs(stripe): replace mock mode with real Stripe test mode and auto-approved test data
- Update Stripe development documentation to explain test mode with auto-approved data
- Replace mock Stripe Connect mode with real Stripe APIs using test credentials
- Add stripeTestData utility module with auto-approved test SSN, bank account, and address data
- Implement test mode detection based on Stripe secret key prefix (sk_test_)
- Update stripeConnectController to use test data utilities for account creation
- Add dev route for creating test transactions and withdrawal data
- Update .env.development to disable mock mode and use real Stripe test mode
- Add comprehensive testing workflow documentation with step-by-step instructions
- Include troubleshooting guide and comparison table between mock and test modes
- Provides real Stripe integration without manual verification requirements

--- a/server/.env.development
+++ b/server/.env.development
@@ -11,5 +11,5 @@ RATE_LIMIT_MAX_REQUESTS=10000
 # Development-friendly settings
 LOG_LEVEL=debug
 
-# Skip Stripe verification in development
-MOCK_STRIPE_CONNECT=true
+# Use real Stripe test mode with auto-approved test data
+# MOCK_STRIPE_CONNECT=false
